--- a/filtering.css
+++ b/filtering.css
@@ -1,16 +1,20 @@
+body {
+    background-color:#222629;
+}    
+
 .portfoliowrapper * {
     box-sizing: border-box;
-    background-color: #f1f1f1;
+    background-color: #86C232;
     padding: 20px;
-    font-family: Arial;
+    font-family: 'Roboto', 'sans-serif';
   
           }
 
-/* Center website */
 .main {
     max-width: 1000px;
     margin: auto;
-}
+    background-color: #86C232;
+    }
 
 h1{
     font-size: 50px;
@@ -21,38 +25,33 @@ h1{
     margin: 8px -16px;
 }
 
-/* Add padding BETWEEN each column (if you want) */
 .row,
 .row > .column {
     padding: 8px;
 }
 
-/* Create three equal columns that floats next to each other */
 .column {
     float: left;
     width: 33.33%;
-    display: none; /* Hide columns by default */
+    display: none; 
+    background-color: #86C232;
 }
-
-/* Clear floats after rows */ 
+ 
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Content */
 .content {
-    background-color: white;
+    background-color:#ddd;
     padding: 10px;
 }
 
-/* The "show" class is added to the filtered elements */
 .show {
     display: block;
 }
 
-/* Style the buttons */
 .btn {
   border: none;
   outline: none;
@@ -61,13 +60,11 @@ h1{
   cursor: pointer;
 }
 
-/* Add a grey background color on mouse-over */
 .btn:hover {
   background-color: #ddd;
 }
 
-/* Add a dark background color to the active button */
 .btn.active {
-  background-color: #666;
+  background-color: #78797D;
    color: white;
 }
